# mlb-statsapi-pydantic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  mlb-stats-memory.md  refactor_tasks.md  settings.json  tasks.md
.claude/hooks/: run_pytest.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: live-game-client.md
examples/: get_schedule.py  live_game.py
src/mlb_statsapi/: __init__.py  __main__.py  cli.py  exceptions.py
src/mlb_statsapi/client/: __init__.py  _base.py  async_client.py  live.py  sync_client.py
src/mlb_statsapi/endpoints/: __init__.py  registry.py
src/mlb_statsapi/enums/: __init__.py  game_types.py  team_ids.py
src/mlb_statsapi/models/: __init__.py  _base.py  attendance.py  awards.py  divisions.py  draft.py  enums.py  game.py  game_responses.py  hydrations.py  jobs.py  leagues.py  livefeed.py  meta.py  people.py  schedule.py  seasons.py  sports.py  standings.py  stats.py  teams.py  transactions.py  venues.py  ws.py
tests/: conftest.py  test_cli.py
tests/fixtures/: attendance.json  awards.json  boxscore.json  context_metrics.json  divisions.json  draft.json  game_changes.json  game_content.json  jobs.json  leagues.json  livefeed.json  malformed_play_events.json  meta_game_types.json  people_660271.json  play_by_play.json  schedule.json  schedule_hydrated_team.json  seasons.json  sports.json  standings.json  stats_leaders.json  transactions.json  uniforms.json  venue_15.json  win_probability.json
tests/test_client/: test_async.py  test_endpoint_registry.py  test_live.py  test_sync.py
tests/test_integration/: test_e2e.py  test_live_api.py
tests/test_models/: test_attendance.py  test_awards.py  test_base.py  test_divisions.py  test_draft.py  test_enums.py  test_game.py  test_game_responses.py  test_jobs.py  test_leagues.py  test_livefeed.py  test_meta.py  test_people.py  test_schedule.py  test_seasons.py  test_sports.py  test_standings.py  test_stats.py  test_teams.py  test_transactions.py  test_venues.py
