[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-statsapi-pydantic"
version = "0.1.0"
description = "Pydantic v2 typed client for the MLB Stats API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_statsapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live MLB Stats API",
]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mlb_statsapi"]
mypy_path = "src"
