[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mlb-statsapi-pydantic"
dynamic = ["version"]
description = "Pydantic v2 typed client for the MLB Stats API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Matthew Cleveland" }]
keywords = ["mlb", "baseball", "statsapi", "pydantic", "api-client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pydantic>=2.0", "httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/DarkSideOfTheMat/mlb-statsapi-pydantic"
Repository = "https://github.com/DarkSideOfTheMat/mlb-statsapi-pydantic"
Issues = "https://github.com/DarkSideOfTheMat/mlb-statsapi-pydantic/issues"
Changelog = "https://github.com/DarkSideOfTheMat/mlb-statsapi-pydantic/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_statsapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit the live MLB Stats API"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mlb_statsapi"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/mlb_statsapi/endpoints/registry.py" = ["E501"]
"src/mlb_statsapi/client/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mlb_statsapi"]
mypy_path = "src"
exclude = "examples"
